--- a/modules-available/exams/templates/page-exams.html
+++ b/modules-available/exams/templates/page-exams.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="panel-body">
 		<div class="slx-space">
-			<table class="table stupidtable">
+			<table class="table table-bordered stupidtable">
 				<thead>
 					<tr>
 						<th data-sort="int">{{lang_id}}</th>
@@ -54,7 +54,6 @@
 				</tbody>
 			</table>
 		</div>
-
 		<div class="text-right">
 			<div class="btn-group" role="group">
 				<a href="?do=exams&action=add" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> {{lang_addExam}}</a>
