[exams] removed bold style from panel headings

--- a/modules-available/exams/templates/page-add-edit-exam.html
+++ b/modules-available/exams/templates/page-add-edit-exam.html
@@ -27,7 +27,7 @@
 	</div>
 
 	<div class="panel panel-default">
-		<div class="panel-heading"><b>{{lang_dateTime}}</b></div>
+		<div class="panel-heading">{{lang_dateTime}}</div>
 		<div class="panel-body">
 			<div class="row form-group">
 				<div class="col-xs-6">
