--- a/modules-available/statistics/templates/filterbox.html
+++ b/modules-available/statistics/templates/filterbox.html
@@ -61,10 +61,10 @@
 		<label for="filterInput">{{lang_labelFilter}}</label>
 		<div class="row">
 			<div class="col-md-12">
-				<div style="display: table">
+				<div class="input-group">
 					<input type="text" name="filters" class="" id="filterInput"/>
-					<span style="display: table-cell; width: 1%; padding-left: 10px">
-						<button type="button" class="btn btn-success pull-right" onclick="popupFilter(null)">
+					<span class="input-group-btn" style=" width: 1%; padding-bottom: 5px;">
+						<button type="button" class="btn btn-success" onclick="popupFilter(null)">
 							<span class="glyphicon glyphicon-plus"></span>
 							{{lang_add_filter}}
 						</button>
