--- a/modules-available/dozmod/templates/runtimeconfig.html
+++ b/modules-available/dozmod/templates/runtimeconfig.html
@@ -71,21 +71,27 @@
 				<p><i>{{lang_descriptionRuntimeLimits}}</i></p>
 				<table class="table-input-group">
 					<tr class="input-group">
-						<td class="input-group-addon" for="max_image_validity">{{lang_maxImageValidity}}</td>
+						<td class="input-group-addon">{{lang_maxImageValidity}}</td>
 						<td>
-							<input name="maxImageValidityDays" id="max_image_validity" class="form-control" type="number" value="{{maxImageValidityDays}}" min="7" max="999" pattern="^\d+$">
+							<input name="maxImageValidityDays" class="form-control" type="number" value="{{maxImageValidityDays}}" min="7" max="999" pattern="^\d+$">
 						</td>
 					</tr>
 					<tr class="input-group">
-						<td class="input-group-addon" for="max_lecture_validity">{{lang_maxLectureVisibility}}</td>
+						<td class="input-group-addon">{{lang_maxLectureVisibility}}</td>
 						<td>
-							<input name="maxLectureValidityDays" id="max_lecture_validity" class="form-control" type="number" value="{{maxLectureValidityDays}}" min="1" max="999" pattern="^\d+$">
+							<input name="maxLectureValidityDays" class="form-control" type="number" value="{{maxLectureValidityDays}}" min="1" max="999" pattern="^\d+$">
 						</td>
 					</tr>
 					<tr class="input-group">
-						<td class="input-group-addon" for="max_transfers">{{lang_maxTransfers}}</td>
+						<td class="input-group-addon">{{lang_maxLocationsPerLecture}}</td>
 						<td>
-							<input name="maxTransfers" id="max_transfers" class="form-control" type="number" value="{{maxTransfers}}" min="1" max="10" pattern="^\d+$">
+							<input name="maxLocationsPerLecture" class="form-control" type="number" value="{{maxLocationsPerLecture}}" min="0" max="999" pattern="^\d+$">
+						</td>
+					</tr>
+					<tr class="input-group">
+						<td class="input-group-addon">{{lang_maxTransfers}}</td>
+						<td>
+							<input name="maxTransfers" class="form-control" type="number" value="{{maxTransfers}}" min="1" max="10" pattern="^\d+$">
 						</td>
 					</tr>
 				</table>
