--- a/modules-available/dozmod/templates/runtimeconfig.html
+++ b/modules-available/dozmod/templates/runtimeconfig.html
@@ -41,26 +41,26 @@
 				<input type="hidden" 	name="defaultImagePermissions[link]" value="0"/>
 
 				<div class="checkbox">
-					<input type="checkbox"  name="defaultImagePermissions[admin]" value="1" {{defaultImagePermissions.admin}} id ="image_admin" class="form-control">
-					<label class="" for="image_admin">
+					<input type="checkbox"  name="defaultImagePermissions[admin]" value="1" {{defaultImagePermissions.admin}} id="image_admin" class="form-control">
+					<label for="image_admin">
 						{{lang_defaultImagePermissionAdmin}}
 					</label>
 				</div>
 				<div class="checkbox">
-						<input type="checkbox" name="defaultImagePermissions[edit]" value="1" {{defaultImagePermissions.edit}} id ="image_edit" class="form-control">
-					<label>
+						<input type="checkbox" name="defaultImagePermissions[edit]" value="1" {{defaultImagePermissions.edit}} id="image_edit" class="form-control">
+					<label for="image_edit">
 						{{lang_defaultImagePermissionEdit}}
 					</label>
 				</div>
 				<div class="checkbox">
-					<input type="checkbox"  name="defaultImagePermissions[download]" value="1" {{defaultImagePermissions.download}} id ="image_download" class="form-control">
-					<label>
+					<input type="checkbox"  name="defaultImagePermissions[download]" value="1" {{defaultImagePermissions.download}} id="image_download" class="form-control">
+					<label for="image_download">
 						{{lang_defaultImagePermissionDownload}}
 					</label>
 				</div>
 				<div class="checkbox">
-					<input type="checkbox"  name="defaultImagePermissions[link]" value="1" {{defaultImagePermissions.link}} id ="image_link" class="form-control">
-					<label>
+					<input type="checkbox"  name="defaultImagePermissions[link]" value="1" {{defaultImagePermissions.link}} id="image_link" class="form-control">
+					<label for="image_link">
 						{{lang_defaultImagePermissionLink}}
 					</label>
 				</div>
@@ -101,8 +101,8 @@
 				<h3>{{lang_miscOptions}}</h3>
 				<div class="checkbox">
 					<input type="hidden" 	name="allowLoginByDefault" value="0">
-					<input type="checkbox"  name="allowLoginByDefault" value="1" {{allowLoginByDefault}} id ="allowLoginByDefault" class="form-control">
-					<label>
+					<input type="checkbox"  name="allowLoginByDefault" value="1" {{allowLoginByDefault}} id="allowLoginByDefault" class="form-control">
+					<label for="allowLoginByDefault">
 						{{lang_allowLoginByDefault}}
 					</label>
 					<p><i>{{lang_allowLoginDescription}}</i></p>
