[statistics&syslog] Changed ip to  machine-uuid for filtering. Fixed a bug where the client-log was losing the specific client when a filter was added.

--- a/modules-available/syslog/templates/page-syslog.html
+++ b/modules-available/syslog/templates/page-syslog.html
@@ -4,7 +4,7 @@
 		max-width: 500px;
 	}
 </style>
-<form method="post" action="?do=SysLog">
+<form method="post" action="?do=SysLog{{#machineuuid}}&machineuuid={{machineuuid}}{{/machineuuid}}">
 	<input type="hidden" name="token" value="{{token}}">
 	<div class="pull-left">
 		<label for="filterstring">{{lang_filter}}</label>
