--- a/modules-available/permissionmanager/templates/_page.html
+++ b/modules-available/permissionmanager/templates/_page.html
@@ -5,17 +5,17 @@
 				<input type="hidden" name="do" value="permissionmanager">
 
 				<div class="btn-group">
-					<button class="btn {{rolesButtonClass}}" type="submit" name="show" value="roles">
+					<button class="btn btn-default {{rolesButtonClass}}" type="submit" name="show" value="roles">
 						<span class="glyphicon glyphicon-education"></span>
 						{{lang_Roles}}
 					</button>
 
-					<button class="btn {{usersButtonClass}}" type="submit" name="show" value="users">
+					<button class="btn btn-default {{usersButtonClass}}" type="submit" name="show" value="users">
 						<span class="glyphicon glyphicon-user"></span>
 						{{lang_Users}}
 					</button>
 
-					<button class="btn {{locationsButtonClass}}" type="submit" name="show" value="locations">
+					<button class="btn btn-default {{locationsButtonClass}}" type="submit" name="show" value="locations">
 						<span class="glyphicon glyphicon-home"></span>
 						{{lang_Locations}}
 					</button>
